--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vựa Rau Xanh</title>
+    <link
+      rel="shortcut icon"
+      href="./img/462551584_562844989545310_3279980248741061040_n.png"
+      type="image/x-icon"
+    />
   </head>
   <body></body>
 </html>
