--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vựa Rau Sạch Việt Nam</title>
-    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/logo1.png" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="" alt="" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Rau Sạch</a></li>
+          <li><a href="#">Nấm Tươi</a></li>
+          <li><a href="#">Healthy</a></li>
+          <li><a href="#">Gia Vị&Thực Phẩm Khô</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
