--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vựa Rau Sạch Việt Nam</title>
     <link rel="shortcut icon" href="./img/logo1.png" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body id="greenzone-theme" class="index">
+    <iframe 
+      allow="join-ad-interest-group" 
+      data-tagging-id="AW-501286884" 
+      data-load-time="1729234627204" 
+      height="0" 
+      width="0" 
+      src="https://td.doubleclick.net/td/rul/501286884" 
+      style="display: none; visibility: hidden;">
+    </iframe>
+    
+    <div class="main-body layoutProduct_Scroll">
+      <!-- Thêm nội dung vào đây -->
+      Chào mừng bạn đến với Vựa Rau Sạch Việt Nam!
+    </div>
+    
+    <div id="quickview-desktop" class="modal fade" role="dialog">
+      <!-- Nội dung cho modal -->
+      Đây là Quick View trên Desktop.
+    </div>
   </body>
 </html>
